Update metadata file song_playlist_mapping.json

--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -1710,7 +1710,8 @@
     ],
     "song_966faa9a3865": [
       "Best tamil songs of all time",
-      "Tamil-Songs-Best-of-All-Time"
+      "Tamil-Songs-Best-of-All-Time",
+      "artist_139FRgoVcJ82jogPttiWcc"
     ],
     "song_39cdeaa13357": [
       "Feel good tamil songs"
@@ -6950,7 +6951,8 @@
       "artist_7rVV9d6vc4FLT752uRuk71"
     ],
     "song_3f7dea782f3b": [
-      "Trending now tamil"
+      "Trending now tamil",
+      "artist_139FRgoVcJ82jogPttiWcc"
     ],
     "song_0d7248dbb972": [
       "Latest hits tamil"
@@ -19472,5 +19474,5 @@
       "artist_7rVV9d6vc4FLT752uRuk71"
     ]
   },
-  "last_updated": "2025-08-13T16:39:01.135673"
+  "last_updated": "2025-08-13T16:48:36.229100"
 }
