Update metadata file song_playlist_mapping.json

--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -7211,7 +7211,8 @@
       "Trending now tamil",
       "Anirudh-all-songs-tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ],
     "song_cbb748339795": [
       "Trending now tamil"
@@ -14817,7 +14818,8 @@
       "anirudhravichander"
     ],
     "song_4f546d767074": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ],
     "song_c5d0752119e5": [
       "anirudhravichander"
@@ -14902,7 +14904,8 @@
     ],
     "song_db303dc2e8a8": [
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ],
     "song_2a7a2da4e5b2": [
       "anirudhravichander",
@@ -15440,7 +15443,8 @@
       "anirudhravichander"
     ],
     "song_797e3dc55b06": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ],
     "song_38e00f2603fb": [
       "anirudhravichander"
@@ -15455,7 +15459,8 @@
       "anirudhravichander"
     ],
     "song_6c834293852b": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ],
     "song_6013aaf41e44": [
       "anirudhravichander"
@@ -15482,7 +15487,8 @@
       "anirudhravichander"
     ],
     "song_da02abc279c7": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ],
     "song_4e512c46ad20": [
       "anirudhravichander"
@@ -19472,7 +19478,106 @@
     ],
     "song_e7e0adc58ba2": [
       "artist_7rVV9d6vc4FLT752uRuk71"
+    ],
+    "song_52832fa59e89": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_9e3c1774c624": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_e547626d5f2a": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_abd9e4105f61": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_652f1131e1ad": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_57d6868257b3": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_87c08a8edf89": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_a09d312ab441": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_b030b6115a23": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_9a16b9eae962": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_799b0821a8c0": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_a557cfc8ce51": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_065346e15d8f": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_bf79e3ecb1e2": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_e7ef4c6ab4ef": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_a2ef0d9b8208": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_d71c76fc0c9e": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_54fcdbb781b2": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_f0cc3f91748e": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_2d7cb4926dea": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_87f3278ca592": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_da17b13c4c2d": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_0a8ed97f3d18": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_ed1e19ed5641": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_45c832f082d3": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_733675154e10": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_6e74e2ff9ec9": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_68ed34b9109e": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_410e61738575": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_f7f60697db08": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_e1bc27ed8517": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_fee040feb8a7": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_837896745a7d": [
+      "artist_6PtoffEX0RiktNdmCeuWkl"
     ]
   },
-  "last_updated": "2025-08-13T16:48:36.229100"
+  "last_updated": "2025-08-13T16:58:53.921116"
 }
