Update metadata file song_playlist_mapping.json

--- a/public/consolidated_music/metadata/song_playlist_mapping.json
+++ b/public/consolidated_music/metadata/song_playlist_mapping.json
@@ -6893,7 +6893,8 @@
     "song_4a9e0003db01": [
       "Latest hits tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_6789994104cf": [
       "Latest hits tamil",
@@ -6902,7 +6903,8 @@
     "song_494f41cd7b1f": [
       "Latest hits tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_37e32a4327f3": [
       "Latest hits tamil"
@@ -6910,7 +6912,8 @@
     "song_18347a06140f": [
       "Latest hits tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_c5c134cadb0d": [
       "Latest hits tamil"
@@ -6925,7 +6928,8 @@
       "Latest hits tamil",
       "Anirudh-all-songs-tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_9b306a4f7315": [
       "Latest hits tamil"
@@ -6937,7 +6941,8 @@
       "Latest hits tamil",
       "Anirudh-all-songs-tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_024bab76ed59": [
       "Latest hits tamil"
@@ -6948,7 +6953,8 @@
     "song_6e39d1390f0e": [
       "Latest hits tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_3f7dea782f3b": [
       "Trending now tamil",
@@ -6961,7 +6967,8 @@
       "Latest hits tamil",
       "Anirudh-all-songs-tamil",
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_1b12320819a7": [
       "Latest hits tamil"
@@ -14800,7 +14807,8 @@
     ],
     "song_f80c8120e244": [
       "anirudhravichander",
-      "artist_7rVV9d6vc4FLT752uRuk71"
+      "artist_7rVV9d6vc4FLT752uRuk71",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_4e627ef9b71b": [
       "anirudhravichander"
@@ -15782,7 +15790,8 @@
       "anirudhravichander"
     ],
     "song_d0fea8c74946": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_1683147023a8": [
       "anirudhravichander"
@@ -18112,22 +18121,28 @@
       "anirudhravichander"
     ],
     "song_588d667f9e95": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_d8caf55fa1ce": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_8f28ecfa3822": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_988583d200da": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_0a3fc0af5c0f": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_d29b8bdc2f5d": [
-      "anirudhravichander"
+      "anirudhravichander",
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ],
     "song_9b12d8f89f89": [
       "artist_4UDzzsfKqZUs5bDy3cisle"
@@ -19577,7 +19592,40 @@
     ],
     "song_837896745a7d": [
       "artist_6PtoffEX0RiktNdmCeuWkl"
+    ],
+    "song_205eb7a481ac": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_ba849e103e49": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_a97ccab0e0e5": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_92d41f38664e": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_2d4a7e84029e": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_3df2a3a846a4": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_857b2a98b09a": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_ef2f529a82ec": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_55451db5ce1d": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_b84ad3c9b93b": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
+    ],
+    "song_77b578e24486": [
+      "artist_3bsrlEbnX8sWwXlTe80RSr"
     ]
   },
-  "last_updated": "2025-08-13T16:58:53.921116"
+  "last_updated": "2025-08-13T17:27:22.416244"
 }
